--- a/assets/css-debug.scss.liquid
+++ b/assets/css-debug.scss.liquid
@@ -32,3 +32,15 @@
 #productrelated {
   // background-color: rgba(255, 10, 255, 0.5);
 }
+
+// #cart {
+//   .thumb {
+//     background-color: rgba(255, 10, 255, 0.5);
+//   }
+//   .producttitle {
+//     background-color: rgba(10, 255, 255, 0.5);
+//   }
+//   .quantities {
+//     background-color: rgba(255, 255, 10, 0.5);
+//   }
+// }
