--- a/assets/css-buttons.scss.liquid
+++ b/assets/css-buttons.scss.liquid
@@ -2,14 +2,18 @@ $fontsize-button-small: {{ settings.fontsize-button-small }};
 $color-link: {{ settings.color-link }};
 $color-black: {{ settings.color-black }};
 $headline-font: {{ settings.headline-font }};
+$cell-margin: {{ settings.cell-margin }};
 
+$cell-margin-half: $cell-margin * 0.5;
+$cell-margin-double: $cell-margin * 2;
+$cell-margin-triple: $cell-margin * 3;
 
 .checkoutbutton {
   font-family: $headline-font;
   background-color: $color-link;
   color: white;
   border: none;
-  padding: 0.5rem 1.5rem 0.5rem 1.5rem;
+  padding: $cell-margin $cell-margin-triple;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -30,8 +34,8 @@ $headline-font: {{ settings.headline-font }};
   border: none;
   font-size: inherit;
   cursor: pointer;
-  margin: 0;
-  padding: 0.25rem 1rem;
+  margin: $cell-margin-half;
+  padding: $cell-margin-half $cell-margin-double;
   font-family: $headline-font;
 
   &:active {
