sub-elements in cart head inherit font weight

--- a/assets/css-typography.scss.liquid
+++ b/assets/css-typography.scss.liquid
@@ -73,12 +73,11 @@ h1 {
   line-height: 1.2em;
   font-weight: 400;
 
-  #breadcrumb {
-    font-size: inherit;
-  }
-
+  #breadcrumb,
   #cartcount {
     font-size: inherit;
+    font-weight: inherit;
+    line-height: inherit;
   }
 }
 
