--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -80,7 +80,7 @@
 <body id="page-{{template}}">
   <div id="autocenterbox">
     <div id="appheader">
-      <div id="appheader-left">
+      <div id="appheadertop">
         <a id="logotype" href="/">eBoy</a>
       </div>
       {% include 'carthead' %}
