css styled buy button on product page

--- a/assets/css-buttons.scss.liquid
+++ b/assets/css-buttons.scss.liquid
@@ -42,3 +42,21 @@ $cell-margin-triple: $cell-margin * 3;
     opacity: 1;
   }
 }
+
+.buybutton {
+  font-family: $headline-font;
+  background-color: $color-link;
+  color: white;
+  border: none;
+  padding: $cell-margin $cell-margin-triple;
+  margin: $cell-margin-double 0 0 0;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: $fontsize-button-small;
+  line-height: $fontsize-button-small;
+  cursor: pointer;
+  width: 100%;
+  font-weight: 400;
+  box-sizing: border-box;
+}
