--- a/assets/css-cart.scss.liquid
+++ b/assets/css-cart.scss.liquid
@@ -4,7 +4,7 @@ $cell-margin-half: $cell-margin * 0.5;
 $cell-margin-double: $cell-margin * 2;
 $cell-margin-triple: $cell-margin * 3;
 
-form {
+#cartform {
   width: 100%;
   padding: $cell-margin;
   box-sizing: border-box;
