--- a/assets/css-typography.scss.liquid
+++ b/assets/css-typography.scss.liquid
@@ -104,13 +104,13 @@ ul.leftlinks li a {
   h2 {
     font-size: $fontsize-producttopinfo;
     font-weight: $fontweight-producttopinfo;
-    margin: 0 0 1rem 0;
   };
 }
 
 .price {
-  font-size: 36px;
   font-family: $body-font;
+  font-size: $fontsize-producttopinfo;
+  font-weight: $fontweight-producttopinfo;
 }
 
 .limited {
