--- a/snippets/sidebarright.liquid
+++ b/snippets/sidebarright.liquid
@@ -8,137 +8,108 @@
 
 <div id="sidebarright">
   <div id="productcontrols">
+    <div class="producttopinfo">
+      <h2 class="productinfo">{{ product.title }}</h2>
+    </div>
     {% case product.type %}
       {% when 'App Store' %}
-        <div class="producttopinfo">
-          <h2 class="productinfo">{{ product.title }}</h2>
-        </div>
-        <div class="APPSTOREbutton">
-                    <a href="{% for variant in product.variants %}{{ variant.sku }}{% endfor %}" target="_blank"><img src="{{ 'AppStoreButton-2x-01k.png' | asset_url }}" width="168" height="71" /></a>
-        </div>
+        <a href="{% for variant in product.variants %}{{ variant.sku }}{% endfor %}" target="_blank">
+          <div class="buybutton">
+            App Store
+          </div>
+        </a>
       {% when 'Kickstarter' %}
-        <div class="producttopinfo">
-          <h2 class="productinfo">{{ product.title }}</h2>
-        </div>
         <div class="APPSTOREbutton">
-                    <a href="{% for variant in product.variants %}{{ variant.sku }}{% endfor %}" target="_blank"><img src="{{ 'KickstarterButton-2x-01s.png' | asset_url }}" width="168" height="71" /></a>
+          <a href="{% for variant in product.variants %}{{ variant.sku }}{% endfor %}" target="_blank"><img src="{{ 'KickstarterButton-2x-01s.png' | asset_url }}" width="168" height="71" /></a>
         </div>
       {% when 'Nuvango' %}
-        <div class="producttopinfo">
-          <h2 class="productinfo">{{ product.title }}</h2>
-        </div>
         <div class="APPSTOREbutton">
           <a href="{% for variant in product.variants %}{{ variant.sku }}{% endfor %}" target="_blank"><img src="{{ 'NuvangoButton-2x-01k.png' | asset_url }}" width="168" height="71" /></a>
         </div>
-          {% when 'Store' %}
-        <div class="producttopinfo">
-          <h2 class="productinfo">{{ product.title }}</h2>
-        </div>
+      {% when 'Store' %}
         <div class="APPSTOREbutton">
           <a href="{% for variant in product.variants %}{{ variant.sku }}{% endfor %}" target="_blank"><img src="{{ 'OPEN-2x-01t.png' | asset_url }}" width="168" height="71" /></a>
         </div>
-          {% when 'Louis Vuitton Malletier' %}
-        <div class="producttopinfo">
-          <h2 class="productinfo">{{ product.title }}</h2>
+      {% when 'Louis Vuitton Malletier' %}
+      <a href="{% for variant in product.variants %}{{ variant.sku }}{% endfor %}" target="_blank">
+        <div class="buybutton">
+          Louis Vuitton
         </div>
-        <div class="APPSTOREbutton">
-          <a href="{% for variant in product.variants %}{{ variant.sku }}{% endfor %}" target="_blank"><img src="{{ 'LouisVuittonButton-2x-01k.png' | asset_url }}" width="168" height="71" /></a>
-        </div>
-          {% when 'Gela Skins' %}
-        <div class="producttopinfo">
-          <h2 class="productinfo">{{ product.title }}</h2>
-        </div>
+      </a>
+      {% when 'Gela Skins' %}
         <div class="APPSTOREbutton">
           <a href="{% for variant in product.variants %}{{ variant.sku }}{% endfor %}" target="_blank"><img src="{{ 'GelaskinsButton-2x-01t.png' | asset_url }}" width="168" height="71" /></a>
         </div>
-          {% when 'Milton and King' %}
-        <div class="producttopinfo">
-          <h2 class="productinfo">{{ product.title }}</h2>
-        </div>
+      {% when 'Milton and King' %}
         <div class="APPSTOREbutton">
           <a href="{% for variant in product.variants %}{{ variant.sku }}{% endfor %}" target="_blank"><img src="{{ 'Milton-2x-02t.png' | asset_url }}" width="168" height="71" /></a>
         </div>
-          {% when 'Threadless' %}
-        <div class="producttopinfo">
-          <h2 class="productinfo">{{ product.title }}</h2>
-        </div>
-        <div class="APPSTOREbutton">
-          <a href="{% for variant in product.variants %}{{ variant.sku }}{% endfor %}" target="_blank"><img src="{{ 'ButtonThreadless-2x-01k.png' | asset_url }}" width="168" height="71" /></a>
-        </div>
+      {% when 'Threadless' %}
+        <a href="{% for variant in product.variants %}{{ variant.sku }}{% endfor %}" target="_blank">
+          <div class="buybutton">
+            Threadless
+          </div>
+        </a>
       {% else %}
         {% if product.available %}
 
           <form action="/cart/add" method="post">
             <div class="producttopinfo" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-              <h2 class="productinfo" itemprop="priceCurrency" content="{{shop.currency}}">{{ product.title }}</h2>
-
-                        <!-- variants -->
-                {%  if product.variants.size > 1 %}
-
+              <!-- variants -->
+              {%  if product.variants.size > 1 %}
                 <div class="price" itemprop="price"><span id="variantprice">{{product.selected_or_first_available_variant.price | money | remove: '.00'}}</span></div>
-
-                  <select name="id" id="variant-dropdown" onchange="updateprice(this.options[this.selectedIndex].text)">
-                                                {% if isTee %}
-                                 <option value="select_tee">Please select a size</option>
-
-                                   {% endif %}
+                <select name="id" id="variant-dropdown" onchange="updateprice(this.options[this.selectedIndex].text)">
+                  {% if isTee %}
+                    <option value="select_tee">Please select a size</option>
+                  {% endif %}
                   {% for variant in product.variants %}
-
                     {% if variant.available == true %}
-
                       <option value="{{variant.id}}" itemprop="price"> {{ variant.title }} {{ variant.price | money | remove: '.00' }} </option>
-                      {% else %}
+                    {% else %}
                       <option disabled="disabled"> {{ variant.title }} - Sold Out! </option>
-                      {% endif %}
+                    {% endif %}
                   {% endfor %}
                 </select>
               {% else %}
-                  {% for variant in product.variants %}
-                      {% if variant.available == true %}
-                        <input type="hidden" name="id" value="{{ product.variants.first.id }}" />
-                        <span class="price" itemprop="price">{{ variant.price | money | remove: '.00'  }}</span>
-                      {% else %}
-                        <span class="soldout"> {{ variant.title }} - Sold Out!</span>
-                      {% endif %}
-                  {% endfor %}
+                {% for variant in product.variants %}
+                  {% if variant.available == true %}
+                    <input type="hidden" name="id" value="{{ product.variants.first.id }}" />
+                    <span class="price" itemprop="price">{{ variant.price | money | remove: '.00'  }}</span>
+                  {% else %}
+                    <span class="soldout"> {{ variant.title }} - Sold Out!</span>
+                  {% endif %}
+                {% endfor %}
               {% endif %}
-                <!-- /variants -->
-
+              <!-- /variants -->
             </div>
-
-
-            <div>
-              <input type="image" name="add" value="BUY" id="add" src="{{ 'BUY-2x.png' | asset_url }}" border="0" class="BUYbutton"/>
-            </div>
+            <input type="submit" name="add" value="Buy" id="add" class="buybutton"/>
           </form>
 
-        {% else %}
-          <div class="producttopinfo">
-            <h2 class="productinfo">{{ product.title }}</h2>
+      {% else %}
+        <div class="producttopinfo">
+          <h2 class="productinfo">{{ product.title }}</h2>
+        </div>
+        {% assign soon = 'false' %}
+        {% for collection in product.collections %}
+          {% if collection.handle == 'soon' %}
+            {% assign soon = 'true' %}
+          {% endif %}
+        {% endfor %}
+
+        {% if soon =='true' %}
+          <div class="SOLDbutton">
+            <img src="{{ 'SOONbutton01k.png' | asset_url }}" />
           </div>
-
-          {% assign soon = 'false' %}
-          {% for collection in product.collections %}
-            {% if collection.handle == 'soon' %}
-              {% assign soon = 'true' %}
-            {% endif %}
-          {% endfor %}
-
-          {% if soon =='true' %}
-              <div class="SOLDbutton">
-                <img src="{{ 'SOONbutton01k.png' | asset_url }}" />
-              </div>
-          {% else %}
-            <div class="SOLDbutton">
-              <img src="{{ 'SOLDbutton-2x-01k.png' | asset_url }}" width="168" height="72" />
-            </div>
-            {% endif %}
+        {% else %}
+          <div class="SOLDbutton">
+            <img src="{{ 'SOLDbutton-2x-01k.png' | asset_url }}" width="168" height="72" />
+          </div>
         {% endif %}
+      {% endif %}
     {% endcase %}
   </div>
 
   <div id="description">
       {{ product.description }}
   </div>
-
 </div>
