--- a/snippets/sidebarright.liquid
+++ b/snippets/sidebarright.liquid
@@ -54,9 +54,6 @@
           </form>
 
       {% else %}
-        <div class="producttopinfo">
-          <h2 class="productinfo">{{ product.title }}</h2>
-        </div>
         {% assign soon = 'false' %}
         {% for collection in product.collections %}
           {% if collection.handle == 'soon' %}
@@ -65,12 +62,12 @@
         {% endfor %}
 
         {% if soon =='true' %}
-          <div class="SOLDbutton">
-            <img src="{{ 'SOONbutton01k.png' | asset_url }}" />
+          <div class="soonbutton">
+            Soon!
           </div>
         {% else %}
-          <div class="SOLDbutton">
-            <img src="{{ 'SOLDbutton-2x-01k.png' | asset_url }}" width="168" height="72" />
+          <div class="soldbutton">
+            Sold Out
           </div>
         {% endif %}
       {% endif %}
