removed tab containing logo, increased header height

--- a/assets/css-colors.scss.liquid
+++ b/assets/css-colors.scss.liquid
@@ -32,7 +32,7 @@ a:hover {
 #logotype,
 #logotype a,
 #logotype a:visited {
-  background-color: $color-header;
+  // background-color: $color-header;
   color: $color-logo;
 
   // 2 column container
