--- a/assets/css-appheader.scss.liquid
+++ b/assets/css-appheader.scss.liquid
@@ -21,9 +21,14 @@ $cell-margin-triple: $cell-margin * 3;
     position: relative;
     padding: 0;
     margin: 0 0 0 $cell * 0.25;
+    height: 7rem;
 
     #logotype {
       padding: 0 $cell-margin-double 0 $cell-margin-triple;
+      padding: 0 $cell-margin-double $cell-margin-triple $cell-margin-triple;
+      bottom: 0;
+      left: 0;
+      position: absolute;
     }
   }
 
