red header, black logo

--- a/assets/css-base.scss.liquid
+++ b/assets/css-base.scss.liquid
@@ -41,34 +41,34 @@ body {
     and (min-width: (2 * $cell + 3 * $cell-margin))
     and (max-width: (3 * $cell + 4 * $cell-margin)) {
     width: 2 * $cell + 3 * $cell-margin;
-    background-color: $color-2c;
+    // background-color: $color-2c;
   }
   // 3 column container
   @media only screen
     and (min-width: (3 * $cell + 4 * $cell-margin))
     and (max-width: (4 * $cell + 5 * $cell-margin)) {
     width: 3 * $cell + 4 * $cell-margin;
-    background-color: $color-3c;
+    // background-color: $color-3c;
   }
   // 4 column container
   @media only screen
     and (min-width: (4 * $cell + 5 * $cell-margin))
     and (max-width: (5 * $cell + 6 * $cell-margin)) {
     width: 4 * $cell + 5 * $cell-margin;
-    background-color: $color-4c;
+    // background-color: $color-4c;
   }
   // 5 column container
   @media only screen
     and (min-width: (5 * $cell + 6 * $cell-margin))
     and (max-width: (6 * $cell + 7 * $cell-margin)) {
     width: 5 * $cell + 6 * $cell-margin;
-    background-color: $color-5c;
+    // background-color: $color-5c;
   }
   // 6 column container
   @media only screen
     and (min-width: (6 * $cell + 7 * $cell-margin)) {
     width: 6 * $cell + 7 * $cell-margin;
-    background-color: $color-6c;
+    // background-color: $color-6c;
   }
 
   min-height: 100%;
