--- a/assets/css-typography.scss.liquid
+++ b/assets/css-typography.scss.liquid
@@ -57,10 +57,10 @@ a:hover {
 
 #logotype {
   font-size: 4rem;
-  font-weight: normal;
+  // font-weight: normal;
   font-family: $logo-font;
   text-transform: uppercase;
-  line-height: 1.2em;
+  line-height: 1em;
 }
 
 /* Submenublock */
@@ -89,6 +89,10 @@ ul.leftlinks {
   font-weight: $fontweight-leftlinks;
   line-height: 1.5rem;
   text-transform: lowercase;
+
+  .exlink {
+    text-transform: none;
+  }
 }
 
 ul.leftlinks li a {
