--- a/snippets/sidebarleft.liquid
+++ b/snippets/sidebarleft.liquid
@@ -11,13 +11,13 @@
       {% endif %}
     {% endfor %}
     <hr>
-    <li class="toptextlink">
+    <li class="exlink">
       <a href="https://db.eboy.com/" target="_blank" class="mdi-database">DB</a>
     </li>
-    <li class="toptextlink">
+    <li class="exlink">
       <a href="https://twitter.com/eboyarts/" target="_blank" class="mdi-twitter">Twitter</a>
     </li>
-    <li class="toptextlink">
+    <li class="exlink">
       <a href="https://www.instagram.com/eboyarts/" target="_blank" class="mdi-instagram">Instagram</a>
     </li>
   </ul>
