bigger logo, 'Georgia' font for sidebar

--- a/assets/css-appheader.scss.liquid
+++ b/assets/css-appheader.scss.liquid
@@ -21,7 +21,7 @@ $cell-margin-triple: $cell-margin * 3;
     position: relative;
     padding: $cell-margin-double;
     margin: 0;
-    height: 8rem;
+    // height: 8rem;
     box-sizing: border-box;
 
     #logotype {
