--- a/assets/css-typography.scss.liquid
+++ b/assets/css-typography.scss.liquid
@@ -56,7 +56,8 @@ a:hover {
 }
 
 #logotype {
-  font-size: 4rem;
+  // font-size: 4rem;
+  font-size: 6rem;
   // font-weight: normal;
   font-family: $logo-font;
   text-transform: uppercase;
