--- a/assets/css-typography.scss.liquid
+++ b/assets/css-typography.scss.liquid
@@ -1,3 +1,4 @@
+$font-size-basic: {{ settings.font-size-basic }};
 $font-leftlinks: {{ settings.font-sidebar-big }};
 $fontsize-leftlinks: {{ settings.fontsize-sidebar-big }};
 $fontweight-leftlinks: {{ settings.fontweight-sidebar-big }};
@@ -26,7 +27,7 @@ $logo-font: {{ settings.logo-font }};
 /* Global */
 body {
   font-family: $body-font;
-  // font-size: 1rem;
+  font-size: $font-size-basic;
 }
 
 b {
@@ -205,9 +206,9 @@ ul.leftlinks li a {
   }
 }
 
-h3.saverow {
-  font-size: 1.2rem;
-  font-family: $headline-font;
+.cartbanner {
+  // font-family: $headline-font;
+  font-family: $cart-font;
 }
 
 #cart ul li h3 a {
